syntax = "proto3";

package gamepb;
option go_package = "/gamepb";

message GameRequest{
  string ip = 1;
  string gameHash = 2;
}

message Vector2D{
  int32 x = 1;
  int32 y = 2;
}

message Token{
  string playerHash = 1;
  string gameHash = 2;
}

message Game{
  string gameHash = 1;
  Token token1 = 2;
  Token token2 = 3;
  GameStatus gameStatus = 4;
  int64 lastUpdate = 5;
}

message DiskStatus{
  Vector2D position = 1;
  Vector2D force = 2;
  float speed = 3;
  int64 lastUpdate = 4;
}

message UserInput{
  optional Vector2D vector = 1;
  Token token = 2;
  optional DiskStatus diskStatus = 3;
}

message GameStatus{
  Vector2D player1 = 1;
  Vector2D player2 = 2;
  optional DiskStatus disk=3;
}


service PositionService{
  rpc RequestGame(GameRequest) returns (Token){};

  rpc UpdateStatus(stream UserInput) returns (stream Game) {};
}